reports/users-and-usage.log
Traceback (most recent call last):
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# KK: can topics be grouped in fewer categories? can DDS be bucketed into categories, e.g. 0.3>=, 0.3<=&<=0.6, 0.6>=? Do we need to show all three variables, projects, DDS and dependents?

df_active["dependents_count"] = df_active["dependents_repos"].apply(count_strings)

most_dependent_projects = df_active.nlargest(50, "dependents_count")

# The API gives wrong numbers for this project:
most_dependent_projects = most_dependent_projects[
    most_dependent_projects["git_url"] != "https://github.com/Open-MSS/MSS.git"
]

fig = px.bar(
    most_dependent_projects,
    x=most_dependent_projects["dependents_count"],
    y=most_dependent_projects["project_name"],
    orientation="h",
    custom_data=["oneliner", "topic", "git_url"],
    color=most_dependent_projects["development_distribution_score"],
    color_continuous_scale=color_continuous_scale,
)

fig.update_layout(
    height=1200,  # Added parameter
    width=800,
    yaxis_title=None,
    xaxis_title="Dependents",
    title="Python projects most frequently used as dependencies",
    coloraxis_colorbar=dict(
        title="DDS",
    ),
    hoverlabel=dict(
        bgcolor="white",
    ),
c)


fig.update_traces(
    hovertemplate="<br>".join(
        [
            "Project Info: <b>%{customdata[0]}</b>",
            "Topic: <b>%{customdata[1]}</b>",
            "Git URL: <b>%{customdata[2]}</b>",
        ]
    )
)
fig.add_layout_image(
    dict(
        source="logo_img",
        xref="paper",
        yref="paper",
        x=1,
        y=0,
        sizex=0.05,
        sizey=0.05,
        xanchor="right",
        yanchor="bottom",
    )
)
fig["layout"]["yaxis"]["autorange"] = "reversed"
fig.show()
------------------

[0;36m  Cell [0;32mIn[5], line 34[0;36m[0m
[0;31m    c)[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m positional argument follows keyword argument

SyntaxError: positional argument follows keyword argument (3064617351.py, line 34)

